--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,41 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway');
+body {
+  background-color: #E0FFCC;
+}
+
 .App {
+  height: 100vh;
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.pista-logo {
+  width: 350px;
+  height: 350px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav-button {
+  flex-basis: 25%;
+  padding: 5px 10px;
+  text-decoration: none;
+  color: #444;
+  font-family: 'Raleway', sans-serif;
+  text-transform: uppercase;
+  font-size: 1.5em;
+  transition: 0.2s;
+}
+
+.nav-button:hover {
+  transition: 0.2s;
+  color: #000;
+  font-weight: bold;
+  font-size: 2.25em;
+}
+
+.internal {
+  margin: 0;
+  cursor: pointer;
 }
