--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ body {
   font-family: 'Raleway', sans-serif;
   text-transform: uppercase;
   font-size: 1.5em;
-  transition: 0.2s;
+  transition: 0.3s;
 }
 
 .nav-button:hover {
@@ -33,6 +33,7 @@ body {
   color: #000;
   font-weight: bold;
   font-size: 2.25em;
+  border-bottom: 2px solid #205200;
 }
 
 .internal {
