--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,11 @@ body {
   background-color: #E0FFCC;
 }
 
+button {
+  background-color: transparent;
+  border: none;
+}
+
 .App {
   height: 100vh;
   text-align: center;
@@ -40,3 +45,14 @@ body {
   margin: 0;
   cursor: pointer;
 }
+
+.about button,
+.about p {
+    margin: 0;
+    text-align: left;
+    padding: 5px 10px;
+    flex-basis: 25%;
+}
+ .about h3 {
+     flex-basis: 100%;
+ }
