--- a/src/App.css
+++ b/src/App.css
@@ -9,12 +9,17 @@ button {
 }
 
 .App {
-    height: 100vh;
     text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    overflow-x: auto;
+}
+
+.internal {
+    margin: 0;
+    cursor: pointer;
 }
 
 .nav-button {
@@ -28,19 +33,6 @@ button {
     transition: 0.3s;
 }
 
-.nav-button:hover {
-    transition: 0.2s;
-    color: #000;
-    font-weight: bold;
-    font-size: 2.25em;
-    border-bottom: 2px solid #205200;
-}
-
-.internal {
-    margin: 0;
-    cursor: pointer;
-}
-
 .about button,
 .about p {
     margin: 0;
@@ -50,4 +42,56 @@ button {
 }
 .about h3 {
     flex-basis: 100%;
+}
+
+@media only screen and (max-width: 600px) {
+    .App {
+        justify-content: flex-start;
+        align-items: flex-start;
+    }
+}
+
+@media only screen and (min-width: 600px) and (max-width: 900px) and (orientation: landscape) {
+    .App {
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+
+    .App {
+        /* height: 100vh; */
+    }
+}
+
+@media only screen and (min-width: 600px) and (max-width: 900px) and (orientation: portrait) {
+    .App {
+        justify-content: center;
+        align-items: center;
+    }
+
+    .App {
+        /* height: 75vh; */
+    }
+}
+
+@media only screen and (min-width: 900px) and (max-width: 1200px) {
+    .App {
+        /* height: 75vh; */
+    }
+
+}
+
+@media only screen and (min-width: 1200px) {
+    .nav-button:hover {
+        transition: 0.2s;
+        color: #000;
+        font-weight: bold;
+        font-size: 2.25em;
+        border-bottom: 2px solid #205200;
+    }
+
+    .App {
+        min-height: 75vh;
+    }
 }
